name:            elmlens
version:         0.1.0.0
synopsis:        First miso app
category:        Web
build-type:      Simple
cabal-version:   >=1.10

executable app
  main-is:           Main.hs
  ghcjs-options:
    -dedupe
  build-depends:     base, miso, elmlens
  default-language:  Haskell2010

executable benchbase
  main-is:           Main.hs
  ghcjs-options:
    -dedupe
  build-depends:     base, miso, random, elmlens
  default-language:  Haskell2010
  hs-source-dirs:    benchbase

executable benchmark
  main-is:           Main.hs
  ghcjs-options:
    -dedupe
  build-depends:     base, miso, random, elmlens
  default-language:  Haskell2010
  hs-source-dirs:    benchmark

library
  exposed-modules:   Elmlens, Apps, Todo, Benchmark, Benchbase
  build-depends:     base, miso >= 1.8.0, random, vector, containers
  default-language:  Haskell2010
