name:            elmlens
version:         0.1.0.0
synopsis:        First miso app
category:        Web
build-type:      Simple
cabal-version:   >=1.10

executable app
  main-is:           Main.hs
  ghcjs-options:
    -dedupe
  build-depends:     base, miso, elmlens
  default-language:  Haskell2010
  hs-source-dirs:    app

executable benchbase
  main-is:           Main.hs
  ghcjs-options:
    -dedupe
  build-depends:     base, miso, random, elmlens
  default-language:  Haskell2010
  hs-source-dirs:    benchbase

executable benchmark
  main-is:           Main.hs
  ghcjs-options:
    -dedupe
  build-depends:     base, miso, random, elmlens
  default-language:  Haskell2010
  hs-source-dirs:    benchmark

executable form
  main-is:           Main.hs
  ghcjs-options:
    -dedupe
  build-depends:     base, miso, elmlens
  default-language:  Haskell2010
  hs-source-dirs:    form

executable theme
  main-is:           Main.hs
  ghcjs-options:
    -dedupe
  build-depends:     base, miso, elmlens
  default-language:  Haskell2010
  hs-source-dirs:    theme

executable test
  main-is:           Main.hs
  build-depends:     base, miso == 1.8.3.0, HUnit, QuickCheck, quickcheck-instances, random, elmlens
  default-language:  Haskell2010
  hs-source-dirs:    test

library
  exposed-modules:   Elmlens, ElmlensProp, Apps, Todo, Benchmark, Benchbase, Example
  build-depends:     base, miso == 1.8.3.0, random, containers
  default-language:  Haskell2010
